# ebook-tools

ebook-tools/: CMakeLists.txt  LICENSE  Makefile  TODO
ebook-tools/src/: Makefile
ebook-tools/src/libepub/: CMakeLists.txt  Makefile  epub.c  epub.h  epub_shared.h  epublib.h  linklist.c  linklist.h  list.c  ocf.c  opf.c
ebook-tools/src/tools/: CMakeLists.txt  Makefile  einfo.c
